[tool.poetry]
name = "midi-lamp"
version = "0.1.0"
description = ""
authors = ["Kjeld Schmidt <contact@kjeld-schmidt.com>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.12"
mido = { "version"="^1.3.2", extras=["ports-rtmidi"]}
requests = "^2.32.3"
types-requests = "^2.32.0.20240914"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"
mypy = "^1.10.1"

[tool.ruff]
line-length = 120

[tool.mypy]
strict = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["mido"]
ignore_missing_imports = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
